# quantum-sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/quantum_simulator/algorithms/: __init__.py  deutsch_jozsa.py  grover.py  qaoa.py  qec.py  qft.py  qpe.py  teleportation.py  vqe.py
backend/quantum_simulator/analysis/: __init__.py  circuit_stats.py  entanglement.py
backend/quantum_simulator/api/: main.py  models.py
backend/quantum_simulator/circuit/: circuit.py  executor.py
backend/quantum_simulator/core/: density_matrix.py  gates.py  measurement.py  state_vector.py  utils.py
backend/quantum_simulator/optimization/: __init__.py  optimizer.py
backend/quantum_simulator/research/: __init__.py  qsvt.py
backend/quantum_simulator/storage/: redis_store.py
backend/tests/: conftest.py  test_api.py  test_circuits.py  test_density_matrix.py  test_grover.py  test_new_features.py  test_qiskit_validation.py
frontend/: index.html  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ControlPanel.tsx  StepControl.tsx
frontend/src/stores/: circuitStore.ts
frontend/src/types/: index.ts
infra/: .gitignore  deploy.sh  destroy.sh  main.tf  terraform.tfstate.1775275880.backup  terraform.tfstate.1775275881.backup  terraform.tfstate.1775275882.backup  terraform.tfstate.1775275883.backup  terraform.tfstate.1775275885.backup  terraform.tfstate.1775275886.backup  terraform.tfvars.example
(+10 files in other folders)
